--- a/content/themes/elements/sass/states/_resizing.scss
+++ b/content/themes/elements/sass/states/_resizing.scss
@@ -25,6 +25,10 @@ body.is-mobile.is-loading > *{
 }
 
 @media #{$medium-down}{
+  html,body{
+    overflow: visible !important;
+  }
+
   body.is-loading{
     height: auto !important;
     background: none !important;
